--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 	/*
 		Mercado Livre - Página Aleatória
-		Versão: 0.5 alpha
+		Versão: 0.6
 
 		Autor: Matheus Alves de Andrade
 		matheusalves.com.br
